--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
     <!-- Sweet Consent Modal -->
     <div class="consent-modal">
         <div class="consent-heart">💖</div>
-        <h2 style="margin: 1rem 0; color: #ff69b4;">আমাদের বিশেষ মুহূর্তে স্বাগতম</h2>
-        <p style="margin-bottom: 1.5rem; color: #666;">আমরা কি কিছু মৃদু সুর যোগ করি? 🎶</p>
+        <h2 style="margin: 1rem 0; color: #ff69b4;">মিষ্টি কিছু</h2>
+        <p style="margin-bottom: 1.5rem; color: #666;">কিছু মৃদু সুর যোগ করি? 🎶</p>
         <div class="consent-buttons">
             <button class="consent-yes" onclick="startExperience(true)">হ্যাঁ, নিশ্চয়ই ❤️</button>
-            <button class="consent-no" onclick="startExperience(false)">এখন না, ধন্যবাদ</button>
+            <button class="consent-no" onclick="startExperience(false)">mhm না</button>
         </div>
     </div>
 
