--- a/index.html
+++ b/index.html
@@ -195,8 +195,9 @@
 <div class="poem-line">যে গল্প কোনোদিন ফুরিয়ে যাবে না,</div>
 <div class="poem-line">যেখানে প্রতিটি পৃষ্ঠা তোমার নামেই লেখা থাকবে।</div>
 
-<div class="poem-line">আমি শুধু চাই, এই জীবনভরে, প্রতিটি নিঃশ্বাসে, প্রতিটি নিরবতায় —</div>
-<div class="poem-line">তুমি থেকো।</div>
+<div class="poem-line">আমি শুধু চাই, প্রতিটি নিঃশ্বাসে, প্রতিটি নিরবতায় — তুমি থেকো</div>
+<div class="poem-line">আমার হয়ে, চিরজীবন.....</div>
+<div class="poem-line">থাকবে তো আমার হয়ে?? আজীবন এর জন্য....??</div>
             <!-- Add all other poem lines here -->
         </div>
     </div>
