--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>চিরন্তন প্রেমের গল্প - তোমার জন্য</title>
+    <title>চিরন্তন ভালোবাসার গল্প - তোমার জন্য</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;500;700&display=swap');
 
@@ -195,9 +195,8 @@
 <div class="poem-line">যে গল্প কোনোদিন ফুরিয়ে যাবে না,</div>
 <div class="poem-line">যেখানে প্রতিটি পৃষ্ঠা তোমার নামেই লেখা থাকবে।</div>
 
-<div class="poem-line">আমি শুধু চাই, প্রতিটি নিঃশ্বাসে, প্রতিটি নিরবতায় — তুমি থেকো</div>
-<div class="poem-line">আমার হয়ে, চিরজীবন.....</div>
-<div class="poem-line">থাকবে তো আমার হয়ে?? আজীবন এর জন্য....??</div>
+<div class="poem-line">আমি শুধু চাই, প্রতিটি নিঃশ্বাসে, প্রতিটি নিরবতায় তুমি থেকো - আমার হয়ে, চিরজীবন.....!!</div>
+<div class="poem-line">থাকবে তো আমার হয়ে?? আজীবন এর জন্য...??</div>
             <!-- Add all other poem lines here -->
         </div>
     </div>
